force-app/main/default/objects/Medical_Trend__c/Medical_Trend__c.object-meta.xml
<CustomObject>
    <label>Medical Trend</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Medical Trend Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Medical Trends</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>