force-app/main/default/objects/Medical_Trend__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Medical Trends</relationshipLabel>
    <relationshipName>Medical_Trends</relationshipName>
    <type>Lookup</type>
</CustomField>