force-app/main/default/objects/Medical_Trend__c/fields/Medical_Trend_Type__c.field-meta.xml
<CustomField>
    <fullName>Medical_Trend_Type__c</fullName>
    <label>Medical Trend Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Traditional</fullName>
            </value>
            <value>
                <fullName>Surest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>