force-app/main/default/objects/Medical_Trend__c/fields/Policy_level_medical_trends__c.field-meta.xml
<CustomField>
    <fullName>Policy_level_medical_trends__c</fullName>
    <label>Policy Level Medical Trend</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>