force-app/main/default/objects/Medical_Trend__c/fields/Q2_Medical_Trend__c.field-meta.xml
<CustomField>
    <fullName>Q2_Medical_Trend__c</fullName>
    <label>Q2 - Medical Trend</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>