force-app/main/default/objects/Medical_Trend__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Year</label>
    <type>Date</type>
</CustomField>