force-app/main/default/objects/Medical_Trend__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Policy_level_medical_trends__c</columns>
    <columns>Year__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Company__c</field>
        <operation>contains</operation>
        <value>The Neiman Marcus Group</value>
    </filters>
    <label>All</label>
</ListView>